--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "classnames": "^2.5.1",
         "next": "15.1.7",
         "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "react-dom": "^19.0.0",
+        "react-responsive-carousel": "^3.2.23"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
