--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@vercel/analytics": "^1.5.0",
+        "@vis.gl/react-google-maps": "^1.5.1",
         "classnames": "^2.5.1",
         "dayjs": "^1.11.13",
         "next": "15.1.7",
