--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "dev": "next dev --turbopack",
-        "build": "rm -rf .next && next build && next start",
+        "build": "next build && next start",
         "start": "next start",
         "lint": "next lint"
     },
